[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemy3.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemy3_Hand.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemy3_Arm.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemy3_Body.png" type="Texture" id=4]
[ext_resource path="res://Assets/Puff.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 10 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Arms/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -60.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arms/Sprite/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 60.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arms/Sprite2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arms/Sprite2/Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "drop"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Arms/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 60.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arms/Sprite/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arms/Sprite2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arms/Sprite2/Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Arms/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arms/Sprite/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arms/Sprite2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 60.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arms/Sprite2/Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "wiggle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Arms/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 20.0, 0.0, -20.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arms/Sprite/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -40.0, 0.0, 40.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arms/Sprite2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 20.0, 0.0, -20.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arms/Sprite2/Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -40.0, 0.0, 40.0 ]
}

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.998864 ), 0.0, 0.0, 0, 0, Vector2( 0.241117, 0.571591 ), 0.0, 0.0, 0, 0, Vector2( 0.505076, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 1.375 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8.5, 1.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 15.75, 14.75 )

[node name="Enemy3" type="KinematicBody2D" groups=["gravity"]]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Arms" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Arms"]
position = Vector2( -7, 1 )
rotation = -1.0472
texture = ExtResource( 3 )
offset = Vector2( -5, 0 )

[node name="Sprite" type="Sprite" parent="Arms/Sprite"]
position = Vector2( -10, -2.38419e-07 )
rotation = 1.0472
texture = ExtResource( 2 )
offset = Vector2( -2, 0 )

[node name="Sprite2" type="Sprite" parent="Arms"]
position = Vector2( 7, 1 )
texture = ExtResource( 3 )
offset = Vector2( 6, 0 )

[node name="Sprite2" type="Sprite" parent="Arms/Sprite2"]
position = Vector2( 10, 0 )
texture = ExtResource( 2 )
offset = Vector2( 2, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.25
anims/RESET = SubResource( 2 )
anims/drop = SubResource( 3 )
anims/up = SubResource( 4 )
anims/wiggle = SubResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 100 )

[node name="GroundCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 13 )

[node name="BackUpTimer" type="Timer" parent="."]
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 12 )
z_index = 1
emitting = false
amount = 25
one_shot = true
explosiveness = 0.9
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 7, 1 )
direction = Vector2( 0, 1 )
gravity = Vector2( 0, -45 )
initial_velocity = 1.0
scale_amount = 0.15
scale_amount_random = 0.5
scale_amount_curve = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="." groups=["enemy_hitbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 12.125 )
shape = SubResource( 7 )

[node name="Head" type="Area2D" parent="." groups=["bounce"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2( 0, -9.5 )
shape = SubResource( 8 )

[node name="SpikeCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeCheck"]
shape = SubResource( 9 )

[connection signal="timeout" from="BackUpTimer" to="." method="_on_BackUpTimer_timeout"]
[connection signal="body_entered" from="SpikeCheck" to="." method="_on_SpikeCheck_body_entered"]
